2007-01-11  Steve M. Robbins  <smr@sumost.ca>

	* Makefile.am (dist-hook): Don't fail if $(distdir)/lib already
	exists.

	* config/bb_enable_doxygen.m4 (BB_ENABLE_DOXYGEN): Add quotes
	around function name, BB_ENABLE_DOXYGEN.

2006-10-26 Baptiste Lepilleur <blep@users.sourceforge.net>
   * include/cppunit/TestResult.h:
   * include/cppunit/ui/Config.h: fixed compilation issues with QtTestRunner.

2006-06-29 Baptiste Lepilleur <blep@users.sourceforge.net>
   * Makefile.am:
   * lib/.keepme: added dummy file to prevent lib/ removal by some
     unzip clients. Fixed bug #1527877 .

   * src/msvc6/TesRunner/TestRunner.rc:
   * src/msvc6/testpluginrunner/TestPlugInRunner.rc: Fixed bug #1528212
     (some resources wrongly tagged as French).

2006-06-29 Baptiste Lepilleur <blep@users.sourceforge.net>
  * include/cppunit/ui/text/TextTestRunner.h
  * src/cppunit/TextTestRunner.cpp: applied patch #1210013 to remove
    hidden virtual function warning.

  * autogen.sh: applied patch #1449380 contributed by Sander Temme
    to allow running autogen on Mac OS X.

  * doc/header.html: updated to handle new tabs css required for
    html doc generated with doxygen 1.4.7.

  * src/msvc6/testrunner/MsDevCallerListCtrl.cpp: applied correction
    provided to fix bug #1498175 (double click on failure does not
    goto failure).

2006-03-04 Baptiste Lepilleur <blep@users.sourceforge.net>
  * contrib/xml-xsl/report.xsl: reported correction posted on the wiki.

  * removed debian/ directory. An up to date patch can be found at:
    packages.debian.org.

  * cppunit.spec.in: applied patch #1242905 partially (%post and %postun).

  * cppunit.pc.in:
  * configure.in:
  * Makefile.am: integrated patch from Robert Leight to generate pkg-config.

2006-02-04 Baptiste Lepilleur <blep@users.sourceforge.net>
  * include/cppunit/TestListener.h: 
  * src/qttestrunner/TestRunnerModel.cpp: removed compilation warning.

2006-02-01 Baptiste Lepilleur <blep@users.sourceforge.net>